source/styles/blocks/product.scss
.product {
  color: #000000;
  position: relative;
  display: flex;
  justify-content: center;
  gap: 36px;
  margin: 0;
  align-items: center;
}

.product__info {
  width: 140px;
  border: 1px solid #663399;
}

.product__title {
  margin: 0 0 14px;
  width: 80px;
  font-family: $Oswald;
  font-size: 16px;
  line-height: 20px;
  font-weight: 400;
  text-transform: uppercase;
  text-align: left;
}

@media (min-width: $tablet-width) {
  .product {
    margin: 0 auto;
    width: 250px;
  }

  .product__image {
    position: absolute;
    width: 161px;
    height: 172px;
    top: -60px;
    left: 45px;
  }

  .product__info {
    width: 250px;
    margin: 120px 0 40px;
  }

  .product__title {
    margin: 0 auto 21px;
    width: 135px;
    text-align: center;
    font-size: 20px;
    line-height: 24px;
  }
}

@media (min-width: $desktop-width) {
  .product__image {
    top: -80px;
  }

  .product__info {
    width: 169px;
    margin: 150px 0 40px;
  }
}

